syntax = "proto3";

message UserInfo {
    int32 user_id = 1;
    string username = 2;
}


